--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ input {
   width: 700px;
   background-color: #e3f6f4;
   border: 3px solid #6bcec6;
-  margin: 60px auto;
+  margin: 60px auto 10px;
   padding: 40px 40px;
 }
 
@@ -131,4 +131,7 @@ a:hover {
 
 .reference {
   font-family: "Courier New", Courier, monospace;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
