--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,16 @@
-h1 {
+#city {
   color: #1ab2a8;
   font-weight: 700;
   font-size: 48px;
   margin: 0 auto;
+}
+
+#country {
+  color: #1ab2a8;
+  font-weight: 500;
+  font-size: 24px;
+  margin: 0 auto;
+  padding-left: 10px;
 }
 
 h5 {
