--- a/src/styles.css
+++ b/src/styles.css
@@ -91,15 +91,11 @@ div.current-temperature {
 }
 
 .degree {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 400;
   color: #1ab2a8;
-}
-
-.active-degree {
-  font-size: 25px;
-  font-weight: 700;
-  color: #1ab2a8;
+  position: relative;
+  bottom: 17px;
 }
 
 #description {
